[package]
name = "github-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"]}
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
